Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7305

Qt/Cocoa sometimes crashes with setUnifiedTitleAndToolBarOnMac(true) (with Testcase)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.6.2
    • 4.5.3, 4.6.0
    • GUI: Window management
    • None
    • Mac OS 10.5
    • c56ede1d6f5082cd10c310d473779cfea3363fe6

      Please compile the attached testcase (please try the first one, I don't know how to get rid of the second one) with Qt 4.5/Cocoa and 4.6/Cocoa

      Press Ctrl+Q and hold it down. This will destroy the MainWindow an create a new one immediately. After few seconds the application will crash.
      This is of course just a way to demonstrate the bug but the same crash happens in "real" applications too (that destroy/recreate a QMainWindow).

      There's a workaround in the destructor that disables the unified Toolbar before destroying the windows.

        1. main.cpp
          1.0 kB
          Nils Jeisecke
        2. main.cpp
          0.9 kB
          Nils Jeisecke
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            pullatti Prasanth Ullattil
            njeisecke Nils Jeisecke
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes