Fix Mac OS X Build (Closes #5763)

Deleted offending code
    setUnifiedTitleAndToolBarOnMac(false);
which was a workaround to avoid bug https://bugreports.qt.io/browse/QTBUG-7305
The bug was fixed at Qt 4.6.2 https://github.com/Blizzard/qt4/blob/master/dist/changes-4.6.2